--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "An Electron application with React",
   "main": "./out/main/index.js",
-  "author": "example.com",
+  "author": "dikshyant-lamsal",
   "homepage": "https://electron-vite.org",
+  "build": {
+    "appId": "diks.ugoapp",
+    "mac": {
+      "category": "ugo.app.category.electron"
+    }
+  },
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
