--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "chokidar": "^5.0.0",
+    "cloudinary": "^2.9.0",
+    "dotenv": "^17.2.3",
+    "googleapis": "^170.1.0",
+    "pg": "^8.17.2",
     "react-router-dom": "^7.12.0",
     "xlsx": "^0.18.5"
   },
